[package]
name = "pingpong-bot"
version = "0.1.0"
authors = ["yanorei32 <yanorei@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.9" }
log = { version = "0.4" }

